--- a/baseballapp/amplify.yml
+++ b/baseballapp/amplify.yml
@@ -6,6 +6,7 @@ frontend:
         - npm install
     build:
       commands:
+        - npm install
         - npm run build
   artifacts:
     baseDirectory: build
