One more adjustment to build settings
-Forgot to tell it to cd into baseballapp while building

--- a/baseballapp/amplify.yml
+++ b/baseballapp/amplify.yml
@@ -6,6 +6,7 @@ frontend:
         - npm install
     build:
       commands:
+        - cd baseballapp
         - npm install
         - npm run build
   artifacts:
