--- a/amplify.yml
+++ b/amplify.yml
@@ -3,14 +3,13 @@ frontend:
   phases:
     preBuild:
       commands:
-        - cd baseballapp
         - npm install
     build:
       commands:
         - npm install
         - npm run build
   artifacts:
-    baseDirectory: /baseballapp
+    baseDirectory: build
     files:
       - '**/*'
   cache:
